# googletest_test_demo

./: CMakeLists.txt  README.md
MyFreeMockTest_NoMain/: CMakeLists.txt  for_test.c  for_test.h  gtest.cpp  testfunction.c  testfunction.h
MyFreeMockTest_NoMain/stub/: stub.c  stub.h
